--- a/raw-text-dark.css
+++ b/raw-text-dark.css
@@ -8,23 +8,24 @@
  *
  *     If you have any issues with this style, please open a ticket at https://github.com/NiklasGollenstede/user-styles
  *
- * @option    name          wrap
- *            title         Wrap text
- *            description   Break long lines instead of scrolling horizontally.
- *            type          bool
- *            on            pre-wrap
+ * @options
+ *   - name        :  wrap
+ *     title       :  Wrap text
+ *     description :  Break long lines instead of scrolling horizontally.
+ *     type        :  bool
+ *     off         :  pre
  */
 
 @-moz-document
-    regexp("^moz-extension://(?!.*[.](html?|gif|jpe?g|a?png|svg)(:?$|[?#])).*$"),
-    regexp("^https?://(?!(?:tools|www)[.]ietf[.]org).*[.](?:css|jsm?|txt)$"),
-    regexp("^file://.*[.](?:css|jsm?|txt)$"),
-    regexp("^resource://.*[.](?:css|jsm?|txt|json)$"),
-    regexp( "^ftp://.*[.](?:css|jsm?|txt|json)$"), /* Firefox doesn't recognize JSON over FTP */
-    regexp("^data:(?!text/x?html)[\\w/-]+[;,].*$"),
-    url-prefix("https://raw.githubusercontent.com/") /* doesn't seem to work */
+    regexp("^resource://.*[.](?:css|jsm?|txt|json)$"/*as:content*/),
+    regexp("^moz-extension://(?!.*[.](html?|gif|svg)(:?$|[?#])).*$"/*as:content*/),
+    regexp("^https?://(?!(?:tools|www)[.]ietf[.]org).*[.](?:css|jsm?|txt)(:?$|[?#].*)"/*as:content*/),
+    regexp("^file://.*[.](?:css|jsm?|txt)$"/*as:content*/),
+    regexp("^ftp://.*[.](?:css|jsm?|txt|json)$"/*as:content*/), /* Firefox doesn't recognize JSON over FTP */
+    regexp("^data:(?!text/x?html)[\\w/-]+[;,].*$"/*as:content*/),
+    url-prefix("https://raw.githubusercontent.com/"/*as:content*/) /* doesn't seem to work */
 {
-    :root:not([class])>body:not([class])>pre:only-child /* .txt files */
+    html:not([class])>body:not([class])>pre:only-child /* plain text */
     {
         filter: invert(100%) hue-rotate(180deg) contrast(90%) saturate(200%) brightness(125%);
         background-color: #E6E9EC; /* inspector body color filtered */
@@ -38,7 +39,7 @@
         padding: 15px;
         tab-size: 4;
         -moz-tab-size: 4;
-        white-space: /*[[!wrap]]*/pre/*[[/wrap]]*/;
+        white-space: /*[[!wrap]]*/pre-wrap/*[[/wrap]]*/;
     }
 }
 
