--- a/scrollbars-hovering-dark.css
+++ b/scrollbars-hovering-dark.css
@@ -4,9 +4,10 @@
  * @author Niklas Gollenstede
  * @licence CC-BY-SA-4.0 or MIT
  * @description
+ *     (Mostly?) broken in Firefox 57+, because scrollbar styles can't be applied anymore.
+ *
  *     Small, grey transparent, hovering scrollbars for dark themes.
  *     Based on https://userstyles.org/styles/83431/minimal-floating-scrollbars-for-firefox-windows.
- *     You may have to reload some pages after applying this style.
  *
  *     If you have any issues with this style, please open a ticket at https://github.com/NiklasGollenstede/stylish
  */
